--- a/ForFunAng/src/app/app.component.html
+++ b/ForFunAng/src/app/app.component.html
@@ -1,11 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div >
-  <h1>
-    Forfrun app
-  </h1>
- <app-value>
-   
- </app-value>
-</div>
 
+<app-navbar></app-navbar>
 
+<app-home></app-home> 
+ 
