--- a/ForFunAng/src/app/navbar/navbar.component.html
+++ b/ForFunAng/src/app/navbar/navbar.component.html
@@ -1,45 +1,48 @@
 
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-  <a class="navbar-brand" href="#">ForFunApp</a>
+  <div class="container">
 
+
+      <a class="navbar-brand" href="#">ForFunApp</a>
+
+      <ul *ngIf="loggedin()" class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Mathes</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Friends</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " href="#">Messages</a>
+        </li>
+       
+      </ul>
   
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Mathes</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Friends</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link " href="#">Messages</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link " (click)="logout()" href="#">Logout</a>
-      </li>
-    </ul>
-
-
-
-
-    <div *ngIf="loggedin()" class="dropdown" >
-      <a class=" dropdown-toggle text-light" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
-        User
-      </a>
+   
+  
+      <div *ngIf="loggedin()" class="dropdown" dropdown>
+        <a class=" dropdown-toggle text-light" dropdownToggle >
+          {{authservice.decodedToken?.unique_name}}
+        </a>
+      
+        <div class="dropdown-menu mt-3"  *dropdownMenu >
+        <a class="dropdown-item" href="#"><i class="fa fa-user"></i>Profile</a>
+        <div class="dropdwon-divider"></div>
+        <a class="dropdown-item" (click)="logout()"><i class="fa fa-sign-out"></i>Logout</a>
+      </div>
+  </div>
+  
     
-      <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-      <a class="dropdown-item" href="#"><i class="fa fa-user"></i>Profile</a>
-      <div class="dropdwon-divider"></div>
-      <a class="dropdown-item" href="#"><i class="fa fa-sign-out"></i>Logout</a>
-    </div>
-</div>
+    
+    
+      <form *ngIf="!loggedin()" #LoginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
+        <input class="form-control mr-sm-2" type="text" name="username" placeholder="Username" required [(ngModel)]="model.username ">
+        <input class="form-control mr-sm-2" type="text" name="password" placeholder="Password" required [(ngModel)]="model.password">
+        <button [disabled]="!LoginForm.valid" class="btn btn-outline-success my-2 my-sm-0" type="submit" >Login</button>
+      </form>
+    
 
-  
-  
-  
-    <form *ngIf="!loggedin()" #LoginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
-      <input class="form-control mr-sm-2" type="text" name="username" placeholder="Username" required [(ngModel)]="model.username ">
-      <input class="form-control mr-sm-2" type="text" name="password" placeholder="Password" required [(ngModel)]="model.password">
-      <button [disabled]="!LoginForm.valid" class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
-    </form>
-  
+
+  </div>
+ 
 </nav>
