--- a/ForFunAng/src/app/navbar/navbar.component.html
+++ b/ForFunAng/src/app/navbar/navbar.component.html
@@ -3,17 +3,17 @@
   <div class="container">
 
 
-      <a class="navbar-brand" href="#">ForFunApp</a>
+      <a class="navbar-brand" [routerLink]="['/home']"  >ForFunApp</a>
 
       <ul *ngIf="loggedin()" class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Mathes</a>
+        <li class="nav-item " routerLinkActive="active">
+          <a class="nav-link" [routerLink]="['/members']"  >Mathes</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Friends</a>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" [routerLink]="['/lists']"  >Friends</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link " href="#">Messages</a>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link " [routerLink]="['/messages']"  >Messages</a>
         </li>
        
       </ul>
