--- a/ForFunAng/src/app/members/member-card/member-card.component.css
+++ b/ForFunAng/src/app/members/member-card/member-card.component.css
@@ -15,5 +15,36 @@ opacity:0.7;
 
     .card-img-wrapper{
          overflow: hidden;
+         position: relative;
 
     }
+    .member-icons{
+
+     position: absolute;
+       bottom: 25%;
+       left: 0;
+       right: 0;
+       margin-right: auto;
+       margin-left: auto;
+       opacity:0;
+
+
+    }
+    .card img:hover{
+     bottom:0;
+     opacity:1;
+     cursor: pointer;
+     
+         }
+
+    .member-icons:hover{
+     
+     opacity:1;
+     cursor: pointer;
+     
+         }
+         .animation{
+
+transition: all 0.3s ease-in-out;
+
+         }
