--- a/ForFunAng/src/app/members/member-card/member-card.component.html
+++ b/ForFunAng/src/app/members/member-card/member-card.component.html
@@ -1,6 +1,14 @@
 <div class="card mb-4">
 <div class="card-image-wrapper">
 <img class="card-img-top" src="{{user.photoURL}}" alt="No img">
+<ul class="list-inline member-icons animate center">
+
+
+    <li class="list-inline-item"><button class="btn btn-danger"[routerLink]="['/members/',user.id]" ><i class="fa fa-user"></i></button></li>
+    <li class="list-inline-item"><button class="btn btn-danger"><i class="fa fa-heart"></i></button></li>
+    <li class="list-inline-item"><button class="btn btn-danger"><i class="fa fa-envelope"></i></button></li>
+
+</ul>
 
 </div>
 <div class="card-body p-1"></div>
