--- a/ForFunAng/src/app/navbar/navbar.component.html
+++ b/ForFunAng/src/app/navbar/navbar.component.html
@@ -21,6 +21,9 @@
    
   
       <div *ngIf="loggedin()" class="dropdown" dropdown>
+        <span class="mr-1">
+          <img src="{{photoUrl}}" alt="No PHOTO">
+        </span>
         <a class=" dropdown-toggle text-light" dropdownToggle >
           {{authservice.decodedToken?.unique_name}}
         </a>
