--- a/ForFunAng/src/app/members/member-card/member-card.component.html
+++ b/ForFunAng/src/app/members/member-card/member-card.component.html
@@ -1,6 +1,6 @@
 <div class="card mb-4">
 <div class="card-image-wrapper">
-<img class="card-img-top" src="{{user.photoURL}}" alt="No img">
+<img class="card-img-top" src="{{user.photoURL || '../../../../../assets/16.1 user.png' }}" alt="No img">
 <ul class="list-inline member-icons animate center">
 
 
