--- a/ForFunAng/src/app/members/member-detail/member-detail.component.html
+++ b/ForFunAng/src/app/members/member-detail/member-detail.component.html
@@ -7,7 +7,7 @@
     <div class="col-sm-4">
        <div class="card">
 
-        <img class="card-img-top img-thumbnail" src="{{user.photoURL}}" alt="{{user.username}}">
+        <img class="card-img-top img-thumbnail" src="{{user.photoURL || '../../../../../assets/16.1 user.png'}}" alt="{{user.username}}">
         <div class="card-body">
            <div>
                <strong>Location:</strong>
