--- a/ForFunAng/src/app/members/member-edit/member-edit.component.html
+++ b/ForFunAng/src/app/members/member-edit/member-edit.component.html
@@ -15,7 +15,7 @@
       <div class="col-sm-4">
          <div class="card">
   
-          <img class="card-img-top img-thumbnail" src="{{photoUrl}}" alt="{{user.username}}">
+          <img class="card-img-top img-thumbnail" src="{{photoUrl || '../../../../../assets/16.1 user.png'}}" alt="{{user.username}}">
           <div class="card-body">
              <div>
                  <strong>Location:</strong>
