--- a/ForFunAng/src/app/register/register.component.html
+++ b/ForFunAng/src/app/register/register.component.html
@@ -1,13 +1,64 @@
-<form #registerForm="ngForm" (ngSubmit)="register()" >
+<form [formGroup]="registerForm"  (ngSubmit)="register()" >
     <div class="form-group">
-      <label for="username">Username</label>
-      <input type="text" class="form-control" id="username" aria-describedby="username" [(ngModel)]="model.username" placeholder="Enter username" name="username" required>
+    
+      <input [ngClass]="{'is-invalid': registerForm.get('username').errors && registerForm.get('username').touched}" type="text" class="form-control"  
+      formControlName="username" placeholder="Enter username"  >
+      <div class="invalid-feedback">Please choose a username</div>
+    </div>
+    <div class="form-group">
       
+      <input  [ngClass]="{'is-invalid': registerForm.get('password').errors && registerForm.get('password').touched}" 
+      type="password" formControlName="password" class="form-control"   placeholder="Password">
+      <div class="invalid-feedback" *ngIf="registerForm.get('password').hasError('required') && registerForm.get('password').touched">A password is required</div>
+      <div class="invalid-feedback" *ngIf="registerForm.get('password').hasError('minlength') && registerForm.get('password').touched">Password must have minimum 5 characters</div>
+      <div class="invalid-feedback" *ngIf="registerForm.get('password').hasError('maxlength') && registerForm.get('password').touched">You can type maximum 20 characters</div>
     </div>
     <div class="form-group">
-      <label for="exampleInputPassword1">Password</label>
-      <input type="password"name="password" required class="form-control" id="exampleInputPassword1" [(ngModel)]="model.password" placeholder="Password">
+      
+      <input  [ngClass]="{'is-invalid': registerForm.get('confirmPassword').errors && registerForm.get('confirmPassword').touched
+    || registerForm.get('confirmPassword').touched
+    && registerForm.hasError('mismatch').touched
+    }"   
+      type="password" formControlName="confirmPassword" 
+      class="form-control"   placeholder="Confirm Password">
+      <div class="invalid-feedback" *ngIf="registerForm.get('confirmPassword').hasError('required') && registerForm.get('confirmPassword').touched">A password is required</div>
+      <div class="invalid-feedback" *ngIf="registerForm.hasError('mismatch') && registerForm.get('confirmPassword').touched">Password must match</div>
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+
+ <div class="form-group">
+  <label class="control-label" style="margin-right:10px">I am a: </label>
+  <label class="radio-inline">
+    <input class="mr-3" type="radio" value="male" formControlName="gender">Male
+  </label>
+  <label class="radio-inline ml-3">
+    <input class="mr-3" type="radio" value="female" formControlName="gender">Female
+  </label>
+</div>
+
+<div class="form-group">
+  <input [ngClass]="{'is-invalid': registerForm.get('birthDate').errors && registerForm.get('birthDate').touched}" class="form-control"
+    placeholder="Date of Birth" formControlName="birthDate" type="text" bsDatepicker [bsConfig]="bsConfig" >
+  <div class="invalid-feedback" *ngIf="registerForm.get('birthDate').touched && registerForm.get('birthDate').hasError('required')">Date of Birth is required</div>
+</div>
+
+
+<div class="form-group">
+  <input [ngClass]="{'is-invalid': registerForm.get('city').errors && registerForm.get('city').touched}" class="form-control"
+    placeholder="City" formControlName="city">
+  <div class="invalid-feedback" *ngIf="registerForm.get('city').touched && registerForm.get('city').hasError('required')">City is required</div>
+</div>
+
+<div class="form-group">
+  <input [ngClass]="{'is-invalid': registerForm.get('country').errors && registerForm.get('country').touched}" class="form-control"
+    placeholder="Country" formControlName="country">
+  <div class="invalid-feedback" *ngIf="registerForm.get('country').touched && registerForm.get('country').hasError('required')">Country is required</div>
+</div>
+
+
+    <div class="form-group text-center">
+
+      <button type="submit" class="btn btn-primary" [disabled]="!registerForm.valid">Submit</button>
     <button type="button" class="btn btn-danger" (click)="cancel()">Cancel</button>
+    </div>
+    
   </form>
