--- a/ForFunAng/src/app/members/member-edit/member-edit.component.html
+++ b/ForFunAng/src/app/members/member-edit/member-edit.component.html
@@ -28,11 +28,11 @@
              </div>
              <div>
               <strong>Last login:</strong>
-              <p>{{user.lastactive}}</p>
+              <p>{{user.lastActive | timeAgo}}</p>
              </div>
              <div>
               <strong>Member since:</strong>
-              <p>{{user.created}}</p>
+              <p>{{user.created | date}}</p>
              </div>
        
           </div>
