--- a/ForFunAng/src/app/members/member-card/member-card.component.html
+++ b/ForFunAng/src/app/members/member-card/member-card.component.html
@@ -6,7 +6,7 @@
 
     <li class="list-inline-item"><button class="btn btn-danger"[routerLink]="['/members/',user.id]" ><i class="fa fa-user"></i></button></li>
     <li class="list-inline-item"><button class="btn btn-danger" (click)="sendLike(user.id)"><i class="fa fa-heart"></i></button></li>
-    <li class="list-inline-item"><button class="btn btn-danger"><i class="fa fa-envelope"></i></button></li>
+    <li class="list-inline-item"><button class="btn btn-danger" [routerLink]="['/members/',user.id]" [queryParams]="{tab:1}" routerLinkActive="router-link-active" ><i class="fa fa-envelope"></i></button></li>
 
 </ul>
 
