--- a/ForFunAng/src/app/members/member-detail/member-detail.component.html
+++ b/ForFunAng/src/app/members/member-detail/member-detail.component.html
@@ -31,7 +31,7 @@
         <div class="card-footer">
             <div class="btn-group d-flex w-100">
                 <button class="btn btn-primary w-100">Like</button>
-                <button class="btn btn-success w-100">Message</button>
+                <button class="btn btn-success w-100" (click)="selectTab(1)">Message</button>
             </div>
         </div>
        </div>
@@ -39,14 +39,14 @@
     <div class="col-sm-8">
      <div class="tab-panel">
 
-    <tabset class="member-tabset">
+    <tabset class="member-tabset" #memberTabs>
 <tab heading="About {{user.username}}">
 <h4>Description</h4>
 <p></p>
 </tab>
 <tab heading="Messages">
 
-
+<app-member-messages [recipientId]="user.id"></app-member-messages>
 </tab>
 <tab heading="Photos">
     <ngx-gallery [options]="galleryoptions" [images]="galleryimages" ></ngx-gallery>
