--- a/ForFunAng/src/app/members/member-card/member-card.component.html
+++ b/ForFunAng/src/app/members/member-card/member-card.component.html
@@ -1,4 +1,4 @@
-<div class="card mb-4">
+<div class="card mb-4 bg">
 <div class="card-image-wrapper">
 <img class="card-img-top" src="{{user.photoURL || '../../../../../assets/16.1 user.png' }}" alt="No img">
 <ul class="list-inline member-icons animate center">
@@ -12,6 +12,6 @@
 
 </div>
 <div class="card-body p-1"></div>
-<h1 class="card-title text-center mb-1"><i class="fa fa-user">{{user.age}}</i></h1>
+<h1 class="card-title text-center mb-1">Age: {{user.age}}</h1>
 <p class="card-text text-muted text-center"></p>
 </div>
