--- a/ForFunAng/src/app/members/member-detail/member-detail.component.html
+++ b/ForFunAng/src/app/members/member-detail/member-detail.component.html
@@ -1,14 +1,16 @@
-<div class="container mt-4">
+<div class="container mt-4 " >
 <div class="row">
     <h1>{{user.username}}'s Profile</h1>
 </div>
 <div class="row">
 
     <div class="col-sm-4">
-       <div class="card">
-
-        <img class="card-img-top img-thumbnail" src="{{user.photoURL || '../../../../../assets/16.1 user.png'}}" alt="{{user.username}}">
+       <div class="card" >
+            
+      
+       
         <div class="card-body">
+                <img class="card-img-top img-thumbnail imgsize" src="{{user.photoURL || '../../../../../assets/16.1 user.png'}}" alt="{{user.username}}" >
            <div>
                <strong>Location:</strong>
        <p>{{user.city}},{{user.country}}</p>
