--- a/ForFunAng/src/app/members/member-edit/member-edit.component.css
+++ b/ForFunAng/src/app/members/member-edit/member-edit.component.css
@@ -10,6 +10,6 @@
     
     .card-footer{
     padding: 10px 15px;
-    background-color:rgb(148, 143, 218);
+    background-color:rgba(22, 5, 5, 0);
     
     }
