--- a/ForFunAng/src/app/members/member-list/member-list.component.html
+++ b/ForFunAng/src/app/members/member-list/member-list.component.html
@@ -25,14 +25,14 @@
         </option>
       </select>
     </div>
-    <button type="submit" class="btn btn-primary" style="margin-left:10px">Apply Filters</button>
+    <button type="submit" class="btn " style="margin-left:10px">Apply Filters</button>
     <button type="button" class="btn btn-info" style="margin-left:10px" (click)="resetFilters()">Reset Filter</button>
 
 
     <div class="col">
       <div class="btn-group float-right">
-        <button type="button" name="orderBy" class="btn btn-primary" (click)="loadUsers()" [(ngModel)]="userParams.orderBy" btnRadio="lastActive">Last Active</button>
-        <button type="button" name="orderBy" class="btn btn-primary" (click)="loadUsers()"   [(ngModel)]="userParams.orderBy" btnRadio="created">Newest Members</button>
+        <button type="button" name="orderBy" class="btn btn-secondary " (click)="loadUsers()" [(ngModel)]="userParams.orderBy" btnRadio="lastActive">Last Active</button>
+        <button type="button" name="orderBy" class="btn btn-secondary" (click)="loadUsers()"   [(ngModel)]="userParams.orderBy" btnRadio="created">Newest Members</button>
       </div>
     </div>
   
