--- a/ForFunAng/src/app/messages/messages.component.css
+++ b/ForFunAng/src/app/messages/messages.component.css
@@ -10,3 +10,11 @@ max-height: 50px;
 td {
     vertical-align:middle; 
 }
+.bg{
+
+    background-color:white;
+    border: 5px solid white;
+    border-radius: 10px;
+    width:100%;
+    height:80%;
+}
