--- a/ForFunAng/src/app/navbar/navbar.component.html
+++ b/ForFunAng/src/app/navbar/navbar.component.html
@@ -1,13 +1,15 @@
 
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-  <div class="container">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark ">
+  
+<div class="container">
 
 
-      <a class="navbar-brand" [routerLink]="['/home']"  >ForFunApp</a>
+
+      <a class="navbar-brand" *ngIf="!loggedin()" [routerLink]="['/home']"  >ForFunApp</a>
 
       <ul *ngIf="loggedin()" class="navbar-nav mr-auto">
         <li class="nav-item " routerLinkActive="active">
-          <a class="nav-link" [routerLink]="['/members']"  >Mathes</a>
+          <a class="nav-link" [routerLink]="['/members']"  >Users</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" [routerLink]="['/lists']"  >Friends</a>
@@ -46,6 +48,6 @@
     
 
 
-  </div>
+    </div>
  
 </nav>
