--- a/ForFunAng/src/app/home/home.component.html
+++ b/ForFunAng/src/app/home/home.component.html
@@ -4,7 +4,7 @@
 
 <h1>Register</h1>
 <div class="text-cent">
-    <button class="btn btn-primary btn-lg mr-2" (click)="registertoggle()">Register</button>
+    <button class="btn btn-info btn-lg mr-2" (click)="registertoggle()">Register</button>
     <button class="btn btn-secondary btn-lg ">Cancel</button>
 </div>
 
@@ -23,8 +23,4 @@
 
     </div>
   </div>
-</div>
-
-
-
 </div>
