--- a/ForFunAng/src/app/register/register.component.html
+++ b/ForFunAng/src/app/register/register.component.html
@@ -58,8 +58,8 @@
 
     <div class="form-group text-center">
 
-      <button type="submit" class="btn btn-primary" [disabled]="!registerForm.valid">Submit</button>
-    <button type="button" class="btn btn-danger" (click)="cancel()">Cancel</button>
+      <button type="submit" class="btn btn-info" [disabled]="!registerForm.valid">Submit</button>
+    <button type="button" class="btn btn-secondary" (click)="cancel()">Cancel</button>
     </div>
     
   </form>
